# ChangeLog for app-arch/rpm
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.146 2012/06/04 09:11:00 jer Exp $

  04 Jun 2012; Jeroen Roovers <jer@gentoo.org> rpm-4.9.1.3.ebuild:
  Stable for HPPA (bug #410949).

  03 Jun 2012; Markus Meier <maekke@gentoo.org> rpm-4.9.1.3.ebuild:
  arm stable, bug #410949

  02 Jun 2012; Agostino Sarubbo <ago@gentoo.org> rpm-4.9.1.3.ebuild:
  Stable for amd64, wrt bug #410949

*rpm-5.3.5 (02 Jun 2012)

  02 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> +files/remaining-5.3.5.txt,
  +rpm-5.3.5.ebuild, metadata.xml:
  Add skel for rpm-5.3.5. The ebuild is not finished, but can stand as base to
  start from.

*rpm-4.10.0 (01 Jun 2012)

  01 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> +rpm-4.10.0.ebuild:
  Version bump to 4.10.0 release.

*rpm-4.9.1.3 (01 Jun 2012)

  01 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> +rpm-4.9.1.3.ebuild,
  -rpm-4.4.7-r6.ebuild, -rpm-4.9.1.2-r2.ebuild:
  Version bump to 4.9.1.3 wrt bug#410949.

  24 May 2012; Mike Frysinger <vapier@gentoo.org> rpm-5.1.6.ebuild:
  Inherit user for enewuser/etc...

  06 May 2012; Raúl Porcel <armin76@gentoo.org> rpm-4.9.1.2.ebuild,
  rpm-4.9.1.2-r2.ebuild:
  Add ~alpha/~ia64/~s390/~sh/~sparc wrt #407029

*rpm-4.9.1.2-r2 (19 Apr 2012)

  19 Apr 2012; Tomáš Chvátal <scarabeus@gentoo.org> +rpm-4.9.1.2-r2.ebuild,
  -rpm-4.9.1.2-r1.ebuild, files/rpm-4.9.1.2-libdir.patch:
  Version bump the libexecdir patch as I forgot to update one more place that
  uses /usr/lib hardcoded. Resolves bug#409729.

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> rpm-4.9.1.2.ebuild:
  x86 stable wrt bug #406479

*rpm-4.9.1.2-r1 (21 Mar 2012)

  21 Mar 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/rpm-4.9.1.2-libdir.patch, +rpm-4.9.1.2-r1.ebuild:
  Try to use libdir patch to be multilib strict wrt bug#365993. Also punt .la
  files.

  19 Mar 2012; Markus Meier <maekke@gentoo.org> rpm-4.9.1.2.ebuild: