@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX remaining-5.3.5.txt 2521 RMD160 849a98a5cc676e49d72a54b8005ce03ca09e9827 SHA1 abe36cfdbb357571ed263288c7deec30d6538c35 SHA256 6c3a4ac2bf1d293821246d822b973f1a3b1dee7f66d2695243c639dc27d6bff4
 AUX rpm-4.4.6-autotools.patch 660 RMD160 63155d3737ffdf9927b1763ddf068c5964e168c9 SHA1 70dd2346df0e5d95ec4a06587485381b48d52b81 SHA256 dd4828899e760358b702d0c2ca75e781619f7b65140cf2cc5600ea687a085569
@@ -25,15 +25,15 @@ DIST rpm-5.3.5.tar.gz 9526224 RMD160 15d735f8eb238b260b1adb92f05feb0709ad1f3c SH
 EBUILD rpm-4.10.0.ebuild 2646 RMD160 a482d2bb01039931ae6dd0d3eff29a887aaa784b SHA1 6a3198180eca8e6445269943ad7742355b009911 SHA256 48b27895d4317e6f8bc893bbd37ed86aaf4d68009c52edddbc0d61bf3c3a5aba
 EBUILD rpm-4.4.6-r7.ebuild 3191 RMD160 5ca2a16ac107c914edbccccdf0d0b2ebeb96c4e2 SHA1 0b69289cf1bc48a453c0c7117e01dd1e4021005c SHA256 1c168326b03609d81932272281226a607db66a62f7ef3114a4baf07cca3f4676
 EBUILD rpm-4.9.1.2.ebuild 2489 RMD160 b64969def0d21696540fddc9487d45236b8b926a SHA1 b791124a00b05a00200919a43564756bb5ab119f SHA256 d391dc7ad4a43b64422ab6e506883a936a7336b0e25cb9e1ef55d2479bbe080e
-EBUILD rpm-4.9.1.3.ebuild 2595 RMD160 79096611e24544078299bb178926d18ac0a8aeb3 SHA1 64e51ff6037dfc057405eb1457e0b334fac4f3fb SHA256 c0532ad244a6d925055545f68142b9a0e3a85f6da72faabae55b504badc1ab37
+EBUILD rpm-4.9.1.3.ebuild 2596 RMD160 a84f40afbaece8744f431132c188bc911c1d7ba1 SHA1 47af1c134767d29ead53a1e0a95af1875f8b095e SHA256 72e569484b921f43cd27400b166af408f98e1d20c35c3308cda12150eceaceae
 EBUILD rpm-5.1.6.ebuild 2965 RMD160 2def9d4e44cdfd12f8b4e7744064726bd23170ba SHA1 7c0a66d7a69fd4de660215718275e45dd870c62e SHA256 e54e87adb9d2947e6ce00c0bbffd022b2be989de27c76feab55adc70e0195b4e
 EBUILD rpm-5.3.5.ebuild 4916 RMD160 6f797b7e243d515b44a6cab85188a198bac426a9 SHA1 19f3d647c23168f8072eb66592ac8b67e406e7df SHA256 1398037d80bb58f103891a0abab6fd2d3c0c9bd03aa4ea4ea31587ecf6c5875e
-MISC ChangeLog 22702 RMD160 56a3698d2deb50f6b984dc65f30846005778cf1a SHA1 e27c38a9721b7f1d5ab1d7bef6a04534e85250cf SHA256 c90fcd3e7ae18e45632639124f4b3e413fb3eefcc255d3ea7cd752090961ee82
+MISC ChangeLog 22800 RMD160 5d1e2b77889736651c9c5e7323522d3c869cdd52 SHA1 4fcbe2bd1276467fba6b1928150e9bf31532b573 SHA256 a2369a9613456db43119013c85229b202851a21d44e400e2f9dc518d435d1243
 MISC metadata.xml 1113 RMD160 667dcf2ae111d9d7bce0a7a57934043b2eff245b SHA1 e4daf8f6fcbf7070a9349e1a13dcec83283bc287 SHA256 267a891ee0c4018f003d15d0a8ae59452b4a50c29fc2ae9bf63094c796892641
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk/Me6oACgkQVWmRsqeSphPfyACfd+OkiNoxrgPKEAFvOi9DoteH
-8woAmwa09sxvECFfB77Yyoqh8aQHerJH
-=Rc9R
+iF4EAREIAAYFAk/MyfcACgkQid6yGVZcMrz0ggEAv0FjHjMVTCuYNjDaQZx1bD0F
+tbvcJW5ozosIj8LjjQUBANNqoSdYxsgBc+ratNrI4hAb0cbpUyn0btRbnb1sHZKP
+=0RnU
 -----END PGP SIGNATURE-----
