@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/rpm-4.9.1.3.ebuild,v 1.4 2012/06/04 09:11:00 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/rpm-4.9.1.3.ebuild,v 1.5 2012/06/04 14:45:05 tomka Exp $
 
 EAPI=4
 
@@ -14,7 +14,7 @@ SRC_URI="http://rpm.org/releases/rpm-4.9.x/${P}.tar.bz2"
 
 LICENSE="GPL-2 LGPL-2"
 SLOT="0"
-KEYWORDS="~alpha amd64 arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+KEYWORDS="~alpha amd64 arm hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86"
 
 IUSE="nls python doc caps lua acl"
 
