@@ -1,26 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-DIST zim-0.53.tar.gz 1293205 RMD160 27f585a7411fd772d55d0290342b7a54382e7c95 SHA1 f5007ca2c6dc8397c15b2ef2b1c33a742d44b959 SHA256 7dc0572abe8fafafb6ddc9837705aaaa9d50a38ec65277d58448d08cc2f17806
 DIST zim-0.54.tar.gz 1326924 RMD160 02f9746fe474b34519815b8f0ed543e97cab661b SHA1 fd8cdfe78185a532016da3974da64373998a46a3 SHA256 a4cd618c6bc8bedeb11a28fc54652c05648f940e13d2d3df7be800d5ce455195
-EBUILD zim-0.53.ebuild 1747 RMD160 344563374646ba7eca54bb5611725e1a5a5c73f7 SHA1 f62d0d06728bb285a9f6733039b4f34ef7353e9a SHA256 8a485e1b067f6f3c99a9aa65d9c9acf78f98627037c2415be25ddcd50198192e
+DIST zim-0.55.tar.gz 1376720 RMD160 483dd7c0206ec2ef401e71132ded45275c998364 SHA1 0485260e6b06eebbbc8bf5528fbabb9606fd04c4 SHA256 f80b6d3be744af07e88a512e665897e4cdc0170a16305106edbb9b144f5fe093
 EBUILD zim-0.54.ebuild 1747 RMD160 6baa2084817d8137078d82d6cd9d74ce002f0564 SHA1 0c2273707a50b94ddffb6c0259a4f2299579c5f0 SHA256 9c7becfdd07bf16d9a17bd89d732f91d5ddb6cd0794cdb1a106dcfc4162ce4a9
-MISC ChangeLog 3669 RMD160 6d087e0d70f2dabafa39d78ac34c62f6a072bb1a SHA1 b711cbc402a3c98c33cd4f879eb5e859a3b6551c SHA256 ed21382d299512b3db0ecda4c80e5f064f19891df05950dbf17d72a5d7cfa706
+EBUILD zim-0.55.ebuild 1747 RMD160 2a1abacc5dbfcc09a9d78c6cce8b08333419eebb SHA1 61a6daa971b7c78790bf8c0212250d461d3af3e5 SHA256 3fc5a61fd351f1e6367be9aaf6610cdb6d3275c87a9154be07045ff7bb07b309
+MISC ChangeLog 3828 RMD160 8c72ae6841fb0c33e70017a4c7b7eec26e08b2aa SHA1 2ccdfdfc2216baa6166481151bea22940bda429d SHA256 569d9213511f7c859693392f966d58fcb0d6cb76eeb018d30e0b7885953c4b58
 MISC metadata.xml 727 RMD160 ec2e0f9d8841ec67ccdd729321582efe37c30ba4 SHA1 af48c645f468bbd126a1a917f384a638cae6b6b8 SHA256 c377b11e645a7257ee7a4d966bd95bcb15a621601c6d876d44d9171f4601f051
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBAgAGBQJPiISmAAoJEDxpGckxwJCBnZQP/3e9KyGhlvDKBxOoui0DGlkh
-QmEjPwFlDqs8FAYdIy9DdXdBU7NCgV1w4QGBksi6KliRrIk6Y0K6596g868QU0rk
-egXZOSTsZVdIz8RCBJOmnogv9FZpS+xKvatbiTX7XBhxfL3UeQ04ly180dsErPV0
-i+1YVotpYz08WD+VCLimd13CzCSHlv5YQ+ixPyi5V/PR8MgO/DvrGW8KxaDq1MbS
-acBZg5t/pLBthUXsXvPEk5f2W/x1mqsfKwKpTzmMeeTwWB2kQuzfoPhHtT0/7nf4
-fiu/SgQ1AoAe7q2ElbkfUg6KCPODNoe3hVN4H0DNqbJd/nnkfG4wx2ShJjGMSqyl
-8Epcg41QhHuLhKV2TyNifJm3jcuwhfqLTOLWJqRhcjsCyZFd/tdFwLdZGDfZhPFw
-Vqooe8mKxYggOjF1G939BH2e3vmLoQAHMnraoGeGTrnMxYCA+UoVZsCtHHOZhawy
-9C8QwlU7A5d7fCJ48f20f1PLHE/p0y+ZjaJYdtdhB+cFIWMwQYnLC4dW9J+GI/+C
-BJquy7ZDlzkBpRA7hTm9ulF1LjCmMcppAEiX9ypyiAileJcN3wclaZp8k7+lZQ3r
-pwiWcRKtXHD/G7AELK+9dNW5WYUffFall8ktvYm4CckRQulF5jR0qsiZJ1k0PFNE
-N8pIJjQASb9Z+cxrzn3O
-=u9+w
+iF4EAREIAAYFAk/NJrMACgkQknrdDGLu8JB4lQEAiTWiu7ReWbhRR9smlbAPfJej
+YweT4BfN7eN3Q+mR35cA/RAghL+MLNLcxZ4DviMCzHqdvqtyKKp+CZ/UKU3V4jHv
+=5WN1
 -----END PGP SIGNATURE-----
