@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/zim/zim-0.53.ebuild,v 1.2 2012/04/13 19:51:48 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/zim/zim-0.55.ebuild,v 1.1 2012/06/04 21:21:16 xmw Exp $
 
 EAPI=3
 
