@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/zim
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/zim/ChangeLog,v 1.18 2012/04/13 19:51:48 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/zim/ChangeLog,v 1.19 2012/06/04 21:21:16 xmw Exp $
+
+*zim-0.55 (04 Jun 2012)
+
+  04 Jun 2012; Michael Weber <xmw@gentoo.org> +zim-0.55.ebuild,
+  -zim-0.53.ebuild:
+  Version bump (bug 406589, thanks Samuel BAUER)
 
   13 Apr 2012; Ulrich Müller <ulm@gentoo.org> zim-0.53.ebuild,
   zim-0.54.ebuild, metadata.xml:
