@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/rpm
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.146 2012/06/04 09:11:00 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/rpm/ChangeLog,v 1.147 2012/06/04 14:45:05 tomka Exp $
+
+  04 Jun 2012; Thomas Kahle <tomka@gentoo.org> rpm-4.9.1.3.ebuild:
+  marked x86 per bug 410949
 
   04 Jun 2012; Jeroen Roovers <jer@gentoo.org> rpm-4.9.1.3.ebuild:
   Stable for HPPA (bug #410949).
